added extra java options to kojo instruction.